--- a/package.json
+++ b/package.json
@@ -9,13 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/drawer": "^6.4.3",
+    "@react-navigation/elements": "^1.3.4",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.2.2",
+    "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
+    "expo-device": "~4.3.0",
+    "expo-haptics": "~11.3.0",
+    "expo-linking": "~3.2.2",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-dotenv": "^3.4.0",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-redux": "^8.0.2",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-native": "^0.70.6"
   },
   "private": true
 }
